Key and Package services with testcases added
