# src/main/java/com/doohee/key/KeyController.java
@@ -1,0 +1,4 @@
+package com.doohee.key;
+
+public class KeyController {
+}
