# src/main/java/com/doohee/main/dto/Exposure.java
@@ -1,0 +1,5 @@
+package com.doohee.main.dto;
+
+public enum Exposure {
+    PRIVATE, PUBLIC;
+}
